Garde Algorithme version 25